# tetrix-android

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/qsmart/tetrix/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/qsmart/tetrix/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/qsmart/tetrix/: ExampleUnitTest.kt
cli/linux/: initialize.sh
cli/windows/: initialize.bat
gradle/wrapper/: gradle-wrapper.properties
