# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# CMAKE
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

cmake_minimum_required(VERSION 3.22.1)

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# PROJECT
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

project("QTetriX")

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# MODULES
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

# hexEngine.Core
set( HEX_EXPORT_HEADERS "" )
set( HEX_EXPORT_SOURCES "" )
add_subdirectory( "src/engine/core" )

# hexEngine.Android

# hexEngine.Net

# hexEngine.GL

# App.Core

# App.Android

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# BUILD
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

add_library(${CMAKE_PROJECT_NAME} SHARED
        native-lib.cpp)

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# LINK
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

target_link_libraries(${CMAKE_PROJECT_NAME}
        android
        log)

# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
